Finally got Live-server working on manjaro, fixed some spacing. will update previous work section after adding navbar and intro section work

--- a/styles/mainPage.css
+++ b/styles/mainPage.css
@@ -4,7 +4,7 @@ body {
 }
 
 p {
-    font-size: small;
+    font-size: medium;
 }
 
 .background-light-grey {
@@ -19,7 +19,7 @@ p {
     display: grid;
     gap: 5px;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(9, 4em);
+    grid-template-rows: repeat(7, 4em);
 }
 
 .job-header {
